# splunk_hec_aio

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/querysplunk/: hec-performance.yml  hec-smoke.yml
.github/requirements/: quality.txt
.github/scripts/: hec_performance_benchmark.py  live_hec_smoke.py  verify_release_candidate.py
.github/workflows/: compatibility.yml  hec-performance.yml  live-integration.yml  packaging.yml  quality.yml  release-publication.yml  release-verification.yml
docs/: compatibility.md  consumer-agent-guide.md  migrating-to-v3.md  performance-benchmark.md  releasing.md
examples/: README.md  async_strict_delivery.py  example.py  indexer_acknowledgment.py  raw_delivery.py  strict_delivery.py
splunk_hec_aio/: splunk_hec_aio.py
tests/: README.md  test_consumer_agent_docs.py  test_example.py  test_hec_performance_benchmark.py  test_live_integration_support.py  test_packaging_artifacts.py  test_packaging_workflow.py  test_release_workflow.py  test_v2_public_api.py  test_v2_released_behavior.py
tests/contract/: __init__.py  test_acknowledgment.py  test_async_api.py  test_hec_protocol.py  test_strict_delivery.py
tests/fixtures/: v2_1_1_public_api.json
tests/legacy/: README.md  splunk_hec_aio_test.py
tests/packaging/: verify_artifacts.py  verify_installed_distribution.py
tests/property/: test_v2_properties.py
tests/unit/: __init__.py  test_queue.py
