[build-system]
requires = [
    "setuptools>=40.8",
    "wheel",
]
build-backend = "setuptools.build_meta"

# Metadata values remain in setup.cfg so Python 3.6-era setuptools can build
# the project. Modern setuptools reads the same values through this PEP 621
# declaration; the distribution name is repeated because PEP 621 requires it.
[project]
name = "Splunk-HEC-AIO"
dynamic = [
    "authors",
    "classifiers",
    "dependencies",
    "description",
    "keywords",
    "license",
    "optional-dependencies",
    "readme",
    "requires-python",
    "urls",
    "version",
]

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["tests/legacy"]

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I"]

# These exact type comparisons and broad exception handling are observable v2
# behavior. Keep the exceptions narrow until a versioned compatibility change.
[tool.ruff.lint.per-file-ignores]
"splunk_hec_aio/splunk_hec_aio.py" = ["B904", "E721", "E722", "I001"]

[tool.ruff.format]
exclude = ["splunk_hec_aio/splunk_hec_aio.py"]

[tool.mypy]
python_version = "3.9"
files = [".github/scripts/live_hec_smoke.py", "tests/packaging"]
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [".*", "build", "dist", "legacy", "node_modules", "venv"]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["splunk_hec_aio"]

[tool.coverage.report]
fail_under = 70
show_missing = true
