[metadata]
name = Splunk-HEC-AIO
version = attr: splunk_hec_aio.splunk_hec_aio.__version__
description = This is a python class file for use with other python scripts to send events to a Splunk http event collector.
long_description = file: README.md
long_description_content_type = text/markdown
author = George (starcher) Starcher
author_email = george@georgestarcher.com
url = https://github.com/georgestarcher/splunk_hec_aio
project_urls =
    Documentation = https://github.com/georgestarcher/splunk_hec_aio#readme
    Issues = https://github.com/georgestarcher/splunk_hec_aio/issues
    Source = https://github.com/georgestarcher/splunk_hec_aio
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: System :: Logging
keywords = splunk hec aio

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp
    aiohttp_retry
include_package_data = False

[options.packages.find]
include =
    splunk_hec_aio
    splunk_hec_aio.*

[options.extras_require]
dev =
    build==1.4.4
    twine==6.2.0
